--- a/resources/angular-views/directive-partials/ui-editable-fields/standalone-field.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/standalone-field.html
@@ -1,40 +1,41 @@
 
-<div class="panel panel-default ui-editable-list-container">
-    <div class="panel-heading">
-        {{ heading }}
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-        <!-- Action buttons -->
-        <div class="pull-right">
-            <span ng-click="save()" ng-show="state == 'editing'">
-                Save &nbsp; <i class="fa fa-toggle-on"></i>
-            </span>
-            <span ng-click="edit()" ng-show="state == 'idle'">
-                Edit &nbsp; <i class="fa fa-toggle-off"></i>
-            </span>
-            <span ng-show="state == 'saving'" style="color: #ccc;">
-                <i class="fa fa-toggle-off"></i>
-            </span>
-        </div>
+<div class="ui-editable-list-container">
+
+    <h3 class="title">
+        {{ heading }}
+        <span></span>
+    </h3>
+
+    <!-- Action buttons -->
+    <div class="ui-editable-fields-actions">
+        <span ng-click="save()" ng-show="state == 'editing'">
+            Save &nbsp; <i class="fa fa-toggle-on"></i>
+        </span>
+        <span ng-click="edit()" ng-show="state == 'idle'">
+            Edit &nbsp; <i class="fa fa-toggle-off"></i>
+        </span>
+        <span ng-show="state == 'saving'" style="color: #ccc;">
+            <i class="fa fa-toggle-off"></i>
+        </span>
     </div>
 
-    <div class="panel-body">
+    <div class="row" ng-switch="state">
 
-        <div class="row" ng-switch="state">
+        <!-- Editable field -->
+        <div ng-switch-when="editing" class="col-sm-12">
+            <textarea ng-model="model[key]" class="form-control"></textarea>
+        </div>
 
-            <!-- Editable field -->
-            <div ng-switch-when="editing" class="col-sm-12">
-                <textarea ng-model="model[key]" class="form-control"></textarea>
-            </div>
+        <!-- Working animation -->
+        <div ng-switch-when="saving" class="text-center" style="padding: 20px 0;">
+            <i class="fa fa-spin fa-4x fa-spinner"></i>
+        </div>
 
-            <!-- Working animation -->
-            <div ng-switch-when="saving" class="text-center" style="padding: 20px 0;">
-                <i class="fa fa-spin fa-4x fa-spinner"></i>
-            </div>
-
-            <!-- Displayed field -->
-            <div ng-switch-default class="col-sm-12">
-                {{ model[key] || empty }}
-            </div>
+        <!-- Displayed field -->
+        <div ng-switch-default class="col-sm-12 ui-editable-fields-muted">
+            {{ model[key] || empty }}
         </div>
     </div>
 </div>
