--- a/resources/angular-views/directive-partials/ui-editable-fields/field-value-timestamp.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/field-value-timestamp.html
@@ -7,12 +7,12 @@
     <a ng-hide="isDisabled" href="javascript:;" class="edit-text">
         {{ timestamp | date:format }}
     </a>
-    <b ng-show="isDisabled">
+    <span ng-show="isDisabled">
         {{ timestamp | date:format }}
-    </b>
+    </span>
 
     <!-- Edit icon -->
     <a ng-hide="isDisabled" href="javascript:;" class="edit-icon fa fa-pencil"></a>
     <i ng-show="isDisabled" class="edit-icon fa fa-ban"></i>
-    
+
 </div>
