--- a/resources/angular-views/directive-partials/ui-editable-fields/field-value-with-units.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/field-value-with-units.html
@@ -3,14 +3,8 @@
 
 <div ng-show="state != 'editing'" class="row no-gutter ui-editable-field-value">
 
-    <!-- Edit icons -->
-    <div class="col-sm-1 text-center">
-        <a ng-hide="isDisabled" href="javascript:;" class="edit-icon fa fa-pencil"></a>
-        <i ng-show="isDisabled" class="edit-icon fa fa-ban"></i>
-    </div>
-
     <!-- Unit selector -->
-    <div class="col-sm-1 text-center">
+    <div class="col-xs-2 text-center">
         <div class="dropdown">
             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true">
                 <i class="fa fa-cog" style="color: #ccc;"></i>
@@ -25,10 +19,15 @@
         </div>
     </div>
 
-    <!-- Displayed data -->
-    <div class="col-sm-10">
+    <div class="col-xs-10">
+
+        <!-- Displayed data -->
         <a href="javascript:;" class="edit-text">
             {{ data.displayStr }}
         </a>
+
+        <!-- Edit icons -->
+        <a ng-hide="isDisabled" href="javascript:;" class="edit-icon fa fa-pencil"></a>
+        <i ng-show="isDisabled" class="edit-icon fa fa-ban"></i>
     </div>
 </div>
