--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -4,7 +4,7 @@
 <div ng-hide="profile.id === 0" class="page profile-page">
     <header>
         <h1>
-            {{ profile.firstName }} {{ profile.lastName }}  <i class="fa fa-user"></i>
+            {{ profile.firstName }} {{ profile.lastName }}
             <span></span>
         </h1>
     </header>
@@ -231,6 +231,17 @@
                     </ui-editable-standalone-field>
         		</div>
         	</div>
+        </div>
+
+        <div class="row text-center">
+            <a ng-click="global.browseTo.hash('trendsDemo')" href="javascript:;">
+                <i class="fa fa-angle-double-down fa-5x"></i>
+            </a>
+        </div>
+
+        <!-- Trends demo -->
+        <div ng-controller="DemoTrendsController" id="trendsDemo">
+            <ng-include src="'profile/partials/demo.trends.html'"></ng-include>
         </div>
     </section>
 </div>
