Style + Demo updates

--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -26,13 +26,6 @@
                 <!-- Profile shortcuts -->
                 <div class="text-center profile-shortcuts">
 
-                    <!-- View trends -->
-                    <a href="#/demo/trends" class="sub-header-btn">
-                        <button class="btn btn-primary btn-circle btn-lg">
-                            <i class="fa fa-line-chart"></i>
-                        </button>
-                    </a>
-
                     <!-- Delete group button -->
                     <a
                         ng-show="profile.id > 0"
@@ -234,7 +227,7 @@
         </div>
 
         <div class="row text-center">
-            <a ng-click="global.browseTo.hash('trendsDemo')" href="javascript:;">
+            <a href="javascript:;">
                 <i class="fa fa-angle-double-down fa-5x"></i>
             </a>
         </div>
