Working on NFL demo

--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -232,9 +232,20 @@
             </a>
         </div>
 
-        <!-- Trends demo -->
+        <!-- Demo: training sesion -->
+        <div ng-controller="DemoTrainingSessionController" id="trendsDemo">
+            <ng-include src="'profile/partials/demo-session.html'"></ng-include>
+        </div>
+
+        <div class="row text-center">
+            <a href="javascript:;">
+                <i class="fa fa-angle-double-down fa-5x"></i>
+            </a>
+        </div>
+
+        <!-- Demo: aggregate data -->
         <div ng-controller="DemoTrendsController" id="trendsDemo">
-            <ng-include src="'profile/partials/demo.trends.html'"></ng-include>
+            <ng-include src="'profile/partials/demo-trends.html'"></ng-include>
         </div>
     </section>
 </div>
