Added demo elements for TechCrunch

--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -209,14 +209,27 @@
                 </div>
 
                 <div class="col-xs-12">
-                    <ui-editable-standalone-field
+                    <!-- <ui-editable-standalone-field
                         data-heading="Previous Injuries"
                         data-model="profile"
                         data-key="injuries"
                         data-empty="No previous injuries."
                         data-save="saveProfileDetails"
                         data-save-callback="saveProfileDetailsCallback">
-                    </ui-editable-standalone-field>
+                    </ui-editable-standalone-field> -->
+
+                    <!-- Demo -->
+                    <div class="ui-editable-list-container">
+                        <h3 class="title">
+                            Previous Injuries
+                            <span></span>
+                        </h3>
+                        <br>
+
+                        <a href="#/demo/trends">
+                            Follow-Up <i class="fa fa-angle-double-right"></i>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="col-xs-12">
