--- a/resources/angular-views/demo/trends/index.html
+++ b/resources/angular-views/demo/trends/index.html
@@ -4,41 +4,37 @@
 <div class="page">
     <header>
         <h1>
-            Trends <i class="fa fa-line-chart"></i>
+            Rehabilitation <i class="fa fa-medkit"></i>
             <span></span>
         </h1>
     </header>
 
+    <!-- Profile summary -->
     <div class="row">
-        <div class="col-xs-12">
-            <chart class="chartjs" data-data="chartjsLine" data-type="Line" value="myChart"></chart>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12">
+        <div class="col-xs-12 col-md-5 col-lg-3">
             <div
-                data-flot-chart
-                data-data="trend.data"
-                data-options="trend.options"
-                class="demo-trendline"
-                style="width: 100%; height: 300px;">
-            </div>
+                ng-style="{background: 'transparent center center no-repeat url('+ global.getSelectedProfile().avatarSrc +')'}"
+                class="aspect-ratio aspect-square"></div>
+        </div>
+
+        <div class="col-xs-12 col-md-7 col-lg-9">
+            {{ global.getSelectedProfile().firstName }}
+            {{ global.getSelectedProfile().lastName }}
+            <br>
+
+            {{ global.getSelectedProfile() }}
         </div>
     </div>
 
+    <!-- Bar chart -->
     <div class="row">
-        <div class="col-sm-12 col-md-6">
-            <canvas
-                data-gauge-chart
-                data-gauge-data="gauge.data"
-                data-gauge-options="gauge.options"
-                style="width: 340px; height: 170px;">
-            </canvas>
-        </div>
-
-        <div class="col-sm-12 col-md-6">
-
+        <div class="col-md-12">
+            <div
+                data-theme-flot-chart
+                data-data="flotData"
+                data-options="flotOptions"
+                style="width: 100%; height: 400px;">
+            </div>
         </div>
     </div>
 </div>
