--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -226,8 +226,8 @@
                         </h3>
                         <br>
 
-                        <a href="#/demo/trends">
-                            Follow-Up <i class="fa fa-angle-double-right"></i>
+                        <a href="#/demo/trends" style="display: inline-block; margin: 10px 0 0 5px;">
+                            <i class="fa fa-angle-double-right fa-fw"></i> Follow-Up
                         </a>
                     </div>
                 </div>
