--- a/resources/angular-views/demo/trends/index.html
+++ b/resources/angular-views/demo/trends/index.html
@@ -61,7 +61,7 @@
                     <span></span>
                 </h5>
 
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-4 col-lg-4 col-lg-offset-4">
                     <div class="input-group">
 
                         <!-- Decrease -->
