--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -226,8 +226,11 @@
                         </h3>
                         <br>
 
+                        Rotator cuff tear (Dec 14, 2015)
+                        <br>
+
                         <a href="#/demo/trends" style="display: inline-block; margin: 10px 0 0 5px;">
-                            <i class="fa fa-angle-double-right fa-fw"></i> Follow-Up
+                            <i class="fa fa-angle-double-right fa-fw"></i> Track Rehabilitation
                         </a>
                     </div>
                 </div>
